# PyAmpTools

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  DockerBuild.sh  DockerInstall.sh  Dockerfile  Makefile  README.html  README.md  additional_info.html  analysis.html  analysis_example.html  api.html  environment.yml  fsroot.html  gallery.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  optimization.html  pa.py  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirements_modifier.sh  search.html  searchindex.js  set_environment.sh  setup.py  twops_moments_forward.py  twops_moments_run_comparison.sh
.devcontainer/: devcontainer.json
EXAMPLES/python/: ExtractNLL.py  PlotGen.py  PlotGenRDF.py  Plotter.py  README.md  cfgGenerator.py  extract_ff.py  fit.py  mcmc.py  mcmcOptimalMoves.py  plotgen.py  plotter.py
NEURAL_DRE/: neural_dre_utils.py
OTHER_CHANNELS/ETAPI0_AUTOGRAD/: lbfgs_test_scipy.py  mcmc_test.py  minuit_test.py  moment_comparison.py  moment_inverter.py  opt_mle.py  optim_test.py  optim_test_run.py  optimize_utility.py  orchestrate.py  resultManager.py
TMP/: markdown-notebooks.html  markdown.html  notebooks.html
_autosummary/: PlotGen.html  PlotGenRDF.html  extract_ff.html  fit.html  mcmc.html  mcmcOptimalMoves.html  module.html  modules.html
_modules/: LoadParameters.html  PlotGen.html  PlotGenRDF.html  atiSetup.html  cfgGenerator.html  extract_ff.html  fit.html  index.html  mcmc.html  mcmcOptimalMoves.html  plotgen_utils.html
_modules/pyamptools/: atiSetup.html  extract_ff.html  mcmc.html  mle.html
_sources/: README.md  additional_info.md  analysis.ipynb  analysis_example.md  api.rst  fsroot.md  intro.md  optimization.md
_sources/_autosummary/: PlotGen.rst  PlotGenRDF.rst  extract_ff.rst  fit.rst  mcmc.rst  mcmcOptimalMoves.rst  module.rst
_sources/api/: atiSetup.rst  cfgGenerator.rst  extract_ff.rst  extract_ff_api.rst  fit.rst  fit_api.rst  loadParameters.rst  mcmc.rst  mcmc_api.rst  plotgen.rst  plotgen_api.rst
_sources/demos/: analysis_chain.ipynb  extract_ff.ipynb  fitting.ipynb  fsroot.ipynb  fsroot_intro.ipynb  generation.ipynb  libraryLoading.ipynb  mcmc.ipynb  mle.ipynb  plotgen.ipynb  pyroot.ipynb
_sources/ift/: iftpwa_config.md  iftpwa_exec.md  iftpwa_intro.md  (+1 more)
api/: atiSetup.html  cfgGenerator.html  extract_ff.html  extract_ff_api.html  fit.html  fit_api.html  loadParameters.html  mcmc.html  mcmc_api.html  mle.html  plotgen.html  plotgen_api.html
benchmark/: README
demos/: analysis_chain.html  analysis_chain.ipynb  extract_ff.html  fitting.html  fsroot.html  fsroot.ipynb  fsroot_advanced.html  fsroot_advanced.ipynb  fsroot_intro.html  generation.html  generation.ipynb  libraryLoading.html  main.yaml  mcmc.html  mcmc.ipynb  mle.html  mle.ipynb  plotgen.html  plotgen.ipynb  pyroot.html
docs/: Makefile  README.md  _config.yml  _toc.yml  additional_info.md  analysis_example.md  api.rst  gallery.md  intro.md
ift/: iftpwa_cf.html  iftpwa_config.html  iftpwa_exec.html  iftpwa_intro.html  iftpwa_tips.html
libraries/: Makefile
notebooks/: fitting.html  generation.html  libraryLoading.html  mcmc.html  mle.html  plotgen.html  pyroot.html
scripts/: Makefile  README.md  cfggen.py  compare_fitfracs.py  gen_vec_ps.py  load.cc  load.cpp  plotgen.py  plotgenrdf.py
src/: pa.py
tests/: AmplitudeParameters_test.py  LoadParameters_test.py  PlotGenRDF_test.py  PlotGen_test.py  cfgGenerator_test.py  cfggen_test.py  environment_test.py  extract_ff_test.py  fit_test.py  gradients_test.py  load_libraries_test.py  mcmc_test.py  mle_mcmc_chain_test.py  mle_test.py  parameterManager_test.py  plotgen_test.py  plotgenrdf_test.py  unit_test.py
utility/: LoadParameters.py  RDF_userDefFuncs.cc  atiSetup.py  find_matching_address.py  gluex_style.h  link_modules.py  plotgen_utils.py  slurm_gpu_status.py  utils.py
utils/: LoadParameters.py  RDF_userDefFuncs.cc  RDFmacros.py  amploader.py  atiSetup.py  gluex_style.h  link_modules.py  plotgen_utils.py  pythonization.py  utils.py
(+125 files in other folders)
