
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
    "matplotlib",
    "pandas",
    "numpy",
    "mplhep",
    "uproot",
    "black",
    "isort",
    "corner",
    "h5py",
    "emcee",
    "tqdm",
    "IPython",
    "ipykernel",
    "jupyter",
    "tbb",        # for FSROOT, multiprocessing/threading
    "psutil",     # check process information
    "pdf2image",  # convert pdf to image for plotGen tutorial documentation
    "scons",      # needed to 'make' AMPTOOLS_GENERATORS
    ### CI
    "pytest",
    "pre-commit",
    ### Fun stuff
    "termcolor",
    ### Docs
    "jupyter-book",
    "ghp-import",

    # Requirements for NIFTy
    # "nifty8",
    # "ducc0",
    # "h5py",
    # "jax",
    # matplotlib removed function needed by pygtc (corner plot alternative), install 3.7.0 if you want
    # "pygtc",
]
name = "pyamptools"
requires-python = ">=3.9"
version = "0.1.0"

[tool.isort]
known_third_party = "THIRDPARTY,sympy"
profile = "black"

[tool.nbqa.addopts]
black = ["--line-length=85"]

[project.scripts]
amp_fit = "pyamptools.mle:_cli_runFits" # variable name will be the executable name in conda env bin
amp_fitfrac = "pyamptools.extract_ff:_cli_extract_ff"
amp_mcmc = "pyamptools.mcmc:_cli_mcmc"

# [tool.setuptools]
# py-modules = []
# package-dir = {"" = "src"}
