
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
    "matplotlib",
    "pandas",
    "numpy",
    "mplhep",
    "uproot",
    "black",
    "isort",
    "corner",
    "h5py",
    "emcee",
    "tqdm",
    "IPython",
    "ipykernel",
    "jupyter",
    "pyarrow",    # storage format
    "tbb",        # for FSROOT, multiprocessing/threading
    "psutil",     # check process information
    "pdf2image",  # convert pdf to image for plotGen tutorial documentation
    "scons",      # needed to 'make' AMPTOOLS_GENERATORS
]
name = "pyamptools"
requires-python = ">=3.9"
version = "0.1.0"

[tool.isort]
known_third_party = "THIRDPARTY,sympy"
profile = "black"

[project.optional-dependencies]
dev = [
  "pyamptools[doc]",
  "pytest",
  "pre-commit",
  "ruff",
]
doc = [
    "jupyter-book",
    "ghp-import",
]

[tool.nbqa.addopts]
black = ["--line-length=85"]

[project.scripts]
pa = "pa:main"
